--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         // GitHub API URL for your repository files
         const repoOwner = 'yomamamia';  // Replace with your GitHub username
         const repoName = 'nfsw-gallery';  // Replace with your GitHub repository name
-        const folderPath = 'new 51/';  // Folder where your videos are stored
+        const folderPath = ['new 51/', 'new 55/'];  // Folder where your videos are stored
 
         const apiUrl = `https://api.github.com/repos/${repoOwner}/${repoName}/contents/${folderPath}`;
 
