--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
   const folderPaths = [
     'new 51',
     'new 58',
-    'more-videos',  // <-- add as many as you want
+    'new 60',
+    'new 63',	
+  'more-videos',  // <-- add as many as you want
   ];
 
   async function loadVideosFromFolder(folderPath) {
